# refresher

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/actions/: action.yml  docker-image-action.yml
.github/actions/docker-build-push-image/: action.yml
.github/actions/docker-pull-image/: action.yml
.github/workflows/: docker-image.yml  native-cicd.yml  native-runner.yml  release-package.yml
apps/speedtester/: admin.py  apps.py  models.py  resources.py  speedtester_uploader.py  tasks.py  tests.py
apps/speedtester/migrations/: 0001_initial.py
apps/speedtester/utils/: __init__.py  abstract_speedtest.py  abstract_tweepy.py  function_methods.py
config/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
docker/grafana/: grafana.ini
docker/grafana/provisioning/dashboards/: dashboard.yml  grafana-dashboard.json
docker/grafana/provisioning/dashboards/data/: data-dashboard.json
docker/grafana/provisioning/datasources/: datasources.yml  grafana-datasources.yml
docker/prometheus/: prometheus.yml
nginx/: ngnix.conf
nginx/site-confs/: default  default.conf  flower  grafana  refresherbackend  speedtester
refresher/: asgi.py  settings.py  wsgi.py
refresher_config/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
refresher_config/fixtures/: django_celery_fixtures.json
scripts/: cr_pull.sh  deployment.sh  entrypoint.sh  local_migrate.sh  local_run.sh  run.sh
(+5 files in other folders)
